<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".LoginActivity">

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_login"
        android:textSize="50sp"
        android:layout_marginTop="50dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <EditText
        android:id="@+id/cellphone"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/et_cellphone"
        android:layout_marginStart="32dp"
        android:text="@string/cellphone_code"
        android:maxLength="14"
        app:layout_constraintTop_toTopOf="@id/btnSendSms"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/btnSendSms"/>

    <Button
        android:id="@+id/btnSendSms"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="62dp"
        android:layout_marginEnd="32dp"
        app:layout_constraintTop_toBottomOf="@id/title"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/send_sms" />

    <EditText
        android:id="@+id/veryfyCode"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/verify_code"
        android:layout_marginStart="32dp"
        android:visibility="gone"
        android:maxLength="6"
        app:layout_constraintTop_toTopOf="@id/btnVerifySms"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/btnVerifySms"
        tools:visibility="visible" />

    <Button
        android:id="@+id/btnVerifySms"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="32dp"
        android:visibility="gone"
        app:layout_constraintTop_toBottomOf="@id/btnSendSms"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@id/btnSendSms"
        android:text="@string/verify_sms"
        tools:visibility="visible"/>

</androidx.constraintlayout.widget.ConstraintLayout>